# act

./: .gitignore  2026-04-09.md  ACT_学习路线指南.md  AGENTS.md  CLAUDE.md  GEMINI.md  constants.py  ee_sim_env.py  imitate_episodes.py  pyproject.toml  record_sim_episodes.py  scripted_policy.py  sim_env.py  utils.py
assets/: bimanual_viperx_ee_stack_cube.xml  bimanual_viperx_stack_cube.xml
docs/: act_instruction_planning_notes.md  training_scenarios_analysis.md
docs/superpowers/plans/: 2026-04-09-sim-stack-cube.md  2026-04-09-stack-cube-optimization.md
docs/superpowers/specs/: 2026-04-09-stack-cube-design.md
tests/: test_stack_cube.py
